@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
 <metadata>
-    <version>1201</version>
+    <version>1400</version>
     <dependencies>
         <dependency>profile-ftw.tagging:default</dependency>
+        <dependency>profile-ftw.colorbox:default</dependency>
   </dependencies>
 </metadata>
